[gd_scene load_steps=10 format=3 uid="uid://cuwkrkhbps5yh"]

[ext_resource type="Script" path="res://src/pnj/pnj.gd" id="1_j0mti"]
[ext_resource type="Texture2D" uid="uid://capq3o1cr84al" path="res://assets/icon.svg" id="2_3lu8u"]
[ext_resource type="Script" path="res://src/utils/state_machine/state_machine.gd" id="3_k886y"]
[ext_resource type="PackedScene" uid="uid://ch6vf2tec6hyf" path="res://src/pnj/states/idle.tscn" id="4_mcxtq"]
[ext_resource type="PackedScene" uid="uid://dru8383r5vain" path="res://src/pnj/states/laughing.tscn" id="5_cq5im"]
[ext_resource type="PackedScene" uid="uid://c8nwu114f4fw3" path="res://src/pnj/states/wandering.tscn" id="6_ml502"]
[ext_resource type="PackedScene" uid="uid://d3rij3juqvwd5" path="res://src/pnj/states/chatting.tscn" id="7_4i6th"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gehh8"]
size = Vector2(130, 130)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_82vvv"]
radius = 60.0
height = 150.0

[node name="Pnj" type="CharacterBody2D"]
position = Vector2(-1, -64)
collision_layer = 4
motion_mode = 1
slide_on_ceiling = false
wall_min_slide_angle = 0.0
script = ExtResource("1_j0mti")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_3lu8u")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("RectangleShape2D_gehh8")

[node name="PnjDetector" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="PnjDetector"]
position = Vector2(0, 60)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_82vvv")

[node name="RayCasts" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="RayCasts"]
position = Vector2(0, 64)
target_position = Vector2(0, 100)

[node name="RayCast2D2" type="RayCast2D" parent="RayCasts"]
position = Vector2(-64, 0)
target_position = Vector2(0, 100)

[node name="RayCast2D3" type="RayCast2D" parent="RayCasts"]
position = Vector2(64, 0)
target_position = Vector2(0, 100)

[node name="RayCast2D4" type="RayCast2D" parent="RayCasts"]
position = Vector2(-1, -61)
target_position = Vector2(0, 100)

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("state")]
script = ExtResource("3_k886y")
state = NodePath("")

[node name="Idle" parent="StateMachine" instance=ExtResource("4_mcxtq")]

[node name="Laughing" parent="StateMachine" instance=ExtResource("5_cq5im")]

[node name="Wandering" parent="StateMachine" instance=ExtResource("6_ml502")]

[node name="Chatting" parent="StateMachine" instance=ExtResource("7_4i6th")]

[connection signal="area_entered" from="PnjDetector" to="." method="_on_pnj_detector_area_entered"]
[connection signal="body_entered" from="PnjDetector" to="." method="_on_pnj_detector_body_entered"]
